--- a/interesttable.ipynb
+++ b/interesttable.ipynb
@@ -23,264 +23,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>years</th>\n",
-       "      <th>value_float</th>\n",
-       "      <th>value_str</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1000.00</td>\n",
-       "      <td>$1000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1035.00</td>\n",
-       "      <td>$1035.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1071.22</td>\n",
-       "      <td>$1071.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1108.72</td>\n",
-       "      <td>$1108.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1147.52</td>\n",
-       "      <td>$1147.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1187.69</td>\n",
-       "      <td>$1187.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1229.26</td>\n",
-       "      <td>$1229.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1272.28</td>\n",
-       "      <td>$1272.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1316.81</td>\n",
-       "      <td>$1316.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1362.90</td>\n",
-       "      <td>$1362.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1410.60</td>\n",
-       "      <td>$1410.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1459.97</td>\n",
-       "      <td>$1459.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>1511.07</td>\n",
-       "      <td>$1511.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>1563.96</td>\n",
-       "      <td>$1563.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>1618.69</td>\n",
-       "      <td>$1618.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>1675.35</td>\n",
-       "      <td>$1675.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
-       "      <td>1733.99</td>\n",
-       "      <td>$1733.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>1794.68</td>\n",
-       "      <td>$1794.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>1857.49</td>\n",
-       "      <td>$1857.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>1922.50</td>\n",
-       "      <td>$1922.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>1989.79</td>\n",
-       "      <td>$1989.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>2059.43</td>\n",
-       "      <td>$2059.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>2131.51</td>\n",
-       "      <td>$2131.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>2206.11</td>\n",
-       "      <td>$2206.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
-       "      <td>2283.33</td>\n",
-       "      <td>$2283.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>2363.24</td>\n",
-       "      <td>$2363.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>2445.96</td>\n",
-       "      <td>$2445.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>2531.57</td>\n",
-       "      <td>$2531.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>2620.17</td>\n",
-       "      <td>$2620.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>29</td>\n",
-       "      <td>2711.88</td>\n",
-       "      <td>$2711.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>30</td>\n",
-       "      <td>2806.79</td>\n",
-       "      <td>$2806.79</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    years  value_float value_str\n",
-       "0       0      1000.00   $1000.0\n",
-       "1       1      1035.00   $1035.0\n",
-       "2       2      1071.22  $1071.22\n",
-       "3       3      1108.72  $1108.72\n",
-       "4       4      1147.52  $1147.52\n",
-       "5       5      1187.69  $1187.69\n",
-       "6       6      1229.26  $1229.26\n",
-       "7       7      1272.28  $1272.28\n",
-       "8       8      1316.81  $1316.81\n",
-       "9       9      1362.90   $1362.9\n",
-       "10     10      1410.60   $1410.6\n",
-       "11     11      1459.97  $1459.97\n",
-       "12     12      1511.07  $1511.07\n",
-       "13     13      1563.96  $1563.96\n",
-       "14     14      1618.69  $1618.69\n",
-       "15     15      1675.35  $1675.35\n",
-       "16     16      1733.99  $1733.99\n",
-       "17     17      1794.68  $1794.68\n",
-       "18     18      1857.49  $1857.49\n",
-       "19     19      1922.50   $1922.5\n",
-       "20     20      1989.79  $1989.79\n",
-       "21     21      2059.43  $2059.43\n",
-       "22     22      2131.51  $2131.51\n",
-       "23     23      2206.11  $2206.11\n",
-       "24     24      2283.33  $2283.33\n",
-       "25     25      2363.24  $2363.24\n",
-       "26     26      2445.96  $2445.96\n",
-       "27     27      2531.57  $2531.57\n",
-       "28     28      2620.17  $2620.17\n",
-       "29     29      2711.88  $2711.88\n",
-       "30     30      2806.79  $2806.79"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    years  value_float value_str\n",
+      "0       0      1000.00   $1000.0\n",
+      "1       1      1035.00   $1035.0\n",
+      "2       2      1071.22  $1071.22\n",
+      "3       3      1108.72  $1108.72\n",
+      "4       4      1147.52  $1147.52\n",
+      "5       5      1187.69  $1187.69\n",
+      "6       6      1229.26  $1229.26\n",
+      "7       7      1272.28  $1272.28\n",
+      "8       8      1316.81  $1316.81\n",
+      "9       9      1362.90   $1362.9\n",
+      "10     10      1410.60   $1410.6\n",
+      "11     11      1459.97  $1459.97\n",
+      "12     12      1511.07  $1511.07\n",
+      "13     13      1563.96  $1563.96\n",
+      "14     14      1618.69  $1618.69\n",
+      "15     15      1675.35  $1675.35\n",
+      "16     16      1733.99  $1733.99\n",
+      "17     17      1794.68  $1794.68\n",
+      "18     18      1857.49  $1857.49\n",
+      "19     19      1922.50   $1922.5\n",
+      "20     20      1989.79  $1989.79\n",
+      "21     21      2059.43  $2059.43\n",
+      "22     22      2131.51  $2131.51\n",
+      "23     23      2206.11  $2206.11\n",
+      "24     24      2283.33  $2283.33\n",
+      "25     25      2363.24  $2363.24\n",
+      "26     26      2445.96  $2445.96\n",
+      "27     27      2531.57  $2531.57\n",
+      "28     28      2620.17  $2620.17\n",
+      "29     29      2711.88  $2711.88\n",
+      "30     30      2806.79  $2806.79\n"
+     ]
     }
    ],
    "source": [
@@ -288,7 +70,7 @@
     "df['years'] = range(0,31)\n",
     "df['value_float'] = round(1000*(1.035**df.years),2)\n",
     "df['value_str'] = [\"$\"+ str(round(x,2)) for x in df.value_float]\n",
-    "df"
+    "print (df)"
    ]
   },
   {
